Fix for bug #15977 (switch ordering of DISABLE KEYS/LOCK TABLE in mysqldump)